<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.classes.trabalho.activity.Activity_Cadastro">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="415dp"
        android:layout_height="740dp"
        android:background="#ACE3BC"
        android:shadowColor="#BF6767"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:text="@string/titulo2"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="57dp" />

    <EditText
        android:id="@+id/idnome"
        android:layout_width="401dp"
        android:layout_height="39dp"
        android:layout_marginTop="172dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idplaca"
        android:layout_width="401dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placa"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/idcor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idnome"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/idcor"
        android:layout_width="401dp"
        android:layout_height="39dp"
        android:layout_marginBottom="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/botaoSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botaoSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:layout_marginBottom="232dp"
        android:text="@string/salvar"
        android:onClick="salvarVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botaoExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="232dp"
        android:onClick="RemoverVeiculo"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/botaoSalvar" />

</androidx.constraintlayout.widget.ConstraintLayout>